syntax = "proto3";

package user;

option go_package = "./user";

message Empty {}

message PaginationRequest {
    int32 page = 1;        // 页码，从1开始
    int32 page_size = 2;   // 每页数量
}

message PaginationResponse {
    int32 total = 1;       // 总记录数
    int32 total_pages = 2; // 总页数
    int32 current_page = 3;// 当前页码
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string phone = 4;
    string avatar = 5;
    string admin_code=6;
}

message RegisterResponse {
    int64 userId = 1;
}

message LoginRequest {
    string identifier = 1; // username/email/phone
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message Address {
    int64 id = 1;
    string address_line1 = 2;
    string address_line2 = 3;
    string city = 4;
    string state = 5;
    string postal_code = 6;
    string country = 7;
}

message GetAddressesRequest {
    int64 userId = 1;
}

message GetAddressesResponse {
    repeated Address addresses = 1;
}

message AddAddressRequest {
    int64 userId = 1;
    Address address = 2;
}
message AddAddressResponse{
    int64 id=1;
}

message EditAddressRequest {
    int64 userId = 1;
    Address address = 2;
}

message DeleteAddressRequest {
    int64 addressId = 1;
}

message SetDefaultAddressRequest {
    int64 userId = 1;
    int64 addressId=2;
}

message GetLoginHistoryRequest {
    int64 user_id = 1;
    PaginationRequest pagination = 2;
    string start_time = 3;     // 开始时间过滤
    string end_time = 4;       // 结束时间过滤
    string sort_field = 5;     // 排序字段，例如："login_time"
    string sort_order = 6;     // 排序方向，"asc" 或 "desc"
    string login_ip = 7;       // IP地址过滤
}

message LoginHistoryEntry {
    int64 id=1;
    int64 userId = 2;
    string login_time = 3;
    string login_ip=4;
}

message GetLoginHistoryResponse {
    repeated LoginHistoryEntry history = 1;
    PaginationResponse pagination = 2;
}


message GetUserInfoRequest {
    int64 userId = 1; // Target user's ID
    int64 requesterId = 2;//the user who request this user info.
}

message UserInfo {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
    string avatar = 5;
    string role=6;
}

message GetUserInfoResponse {
    UserInfo user = 1;
}

message GetCollectionRequest {
    int64 user_id = 1;
    PaginationRequest pagination = 2;
    string sort_field = 3;     // 排序字段，例如："created_at"
    string sort_order = 4;     // 排序方向
}

message GetCollectionResponse {
    repeated int64 product_ids = 1;
    PaginationResponse pagination = 2;
}

message AddCollectionRequest {
    int64 userId=1;
    int64 productId=2;
}
message EditCollectionRequest{
    int64 userId=1;
    repeated int64 productIds=2;
}
message DeleteCollectionRequest {
    int64 userId=1;
    int64 productId=2;
}

service User {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetAddresses(GetAddressesRequest) returns (GetAddressesResponse);
    rpc AddAddress(AddAddressRequest) returns (AddAddressResponse);
    rpc EditAddress(EditAddressRequest) returns (Empty);
    rpc DeleteAddress(DeleteAddressRequest) returns (Empty);
    rpc SetDefaultAddress(SetDefaultAddressRequest) returns (Empty);
    rpc GetLoginHistory(GetLoginHistoryRequest) returns (GetLoginHistoryResponse);
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
    rpc GetCollection(GetCollectionRequest) returns (GetCollectionResponse);
    rpc AddCollection(AddCollectionRequest) returns (Empty);
    rpc EditCollection(EditCollectionRequest) returns (Empty);
    rpc DeleteCollection(DeleteCollectionRequest) returns (Empty);
}